Add Displayable interface, Launcher, update models and config