@@ -11,8 +11,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>26</maven.compiler.source>
+        <maven.compiler.target>26</maven.compiler.target>
         <javafx.version>21.0.6</javafx.version>
     </properties>
 
@@ -42,8 +42,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>26</source>
+                    <target>26</target>
                 </configuration>
             </plugin>
 
@@ -54,6 +54,11 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>pharmastock.ui.MainApp</mainClass>
+                    <options>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
 
@@ -70,7 +75,7 @@
                             <outputFile>${project.build.directory}/PharmaStock-fat.jar</outputFile>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>pharmastock.ui.MainApp</mainClass>
+                                    <mainClass>pharmastock.ui.Launcher</mainClass>
                                 </transformer>
                             </transformers>
                             <filters>
